samples/_failures_safe/1761278694_be3043_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f22f73f9.c: In function ‘main’:
./samples/SAFE/__tmp_f22f73f9.c:169:12: error: missing terminating " character
  169 |     printf("Enter arithmetic expression:
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f22f73f9.c:169:5: error: expected expression at end of input
  169 |     printf("Enter arithmetic expression:
      |     ^~~~~~
./samples/SAFE/__tmp_f22f73f9.c:169:5: error: expected declaration or statement at end of input
